# sanctum-router

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LICENSE-DOCS  README.md  docker-compose.yaml  issue_close_10.md  issue_close_11.md  issue_close_21.md  issue_close_7.md  pyproject.toml  requirements.txt
docs/: CONTROL_PLANE.md  OVERVIEW.md  PERSISTENCE_AND_SECRETS.md  PHASE1_GAP_ANALYSIS.md  PRD.md  PRD_PROVIDER_MONITOR_ADAPTERS.md  QUICKSTART.md  README.md  REFERENCE.md  plan.md
plugins/: README.md
plugins/sanctum_router/: __init__.py  cli.py
router/: __init__.py  __main__.py  admin.py  auth.py  bootstrap.py  cli.py  config.py  credit_health.py  crypto_utils.py  db.py  main.py  proxy.py  routing_engine.py
router/adapters/: __init__.py  base.py  openai_compatible.py
router/monitors/: __init__.py  openai_compat.py  schemas.py  venice.py
scripts/: fetch_issues.py  fix_prd_edits.py
tests/: conftest.py
tests/e2e/: test_live.py
tests/integration/: test_api.py
tests/unit/: test_adapter.py  test_auth.py  test_bootstrap.py  test_config.py  test_credit_health.py  test_credit_health_async.py  test_crypto_utils.py  test_db.py  test_monitors.py  test_proxy_models.py  test_routing_engine.py
