[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctum-router"
version = "0.1.7"
description = "Self-hosted OpenAI-compatible inference proxy with multi-provider routing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["router", "plugins"]
branch = true
omit = ["*/__main__.py", "*/tests/*", "router/cli.py", "plugins/sanctum_router/cli.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]

[tool.setuptools.packages.find]
where = ["."]
include = ["router*"]

[project.scripts]
router-cli = "router.cli:main"
